<resources>
    <string name="app_name">RoomExample</string>
    <string name="employee_id">Employee ID</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="city">City</string>
    <string name="save">Save</string>
    <string name="fetch">Fetch</string>
    <string name="search_by_name">Search by name</string>
    <string name="search">Search</string>
    <string name="remember_me">Remember me</string>
    <string name="emp_id">4150</string>
    <string name="subarno_chatterjee">Subarno Chatterjee</string>
    <string name="new_delhi">New Delhi</string>
    <string name="space"> %s </string>
</resources>
